2011-02-03  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-checkout-model): accept both a
	single file and a file set as an argument

2011-02-02  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-checkout-model): use an implicit
	checkout model for unreserved checkouts.

2011-01-29  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-version): updated to 3.6-pre.

2011-01-20  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-registered): use "-dir" option for
	the ls command (makes it work for directories)

2011-01-18  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-revert-unchanged-files): more
	reliable detection of files modified outside emacs.

2011-01-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-revert-unchanged-files): call
	`vc-resynch-buffer' before checking if the file is modified.

2010-11-25  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-get-attribute): new function

2010-11-25  Alex Harsanyi  <AlexHarsanyi@gmail.com>
	* vc-clearcase.el (clearcase-revert-unchanged-files): new function

	* ucm.el (ucm-actb-show-diff, ucm-actb-revert-command): don't use
	`find-file-noselect', instead use `vc-clearcase-registered'.
	(ucm-actb-checkin-command, ucm-checkin-activity): use
	`clearcase-revert-unchanged-files'

2010-11-25  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-setup-vprop): check that the supplied
	DIR param is actually inside this view.  Also set the ROOT-PATH
	slot.
	(clearcase-get-vprop): use `error' instead of `assert'
	(vc-clearcase-start-view): try to create a VPROP for the view that
	was started.

2010-11-10  Michael Albinus  <michael.albinus@gmx.de>

	* vc-clearcase.el (clearcase-dir-status-collect, vc-clearcase-diff):
	Do not use `kill-line' or `kill-region', they trash the kill ring.

2010-11-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>
