@@ -2,6 +2,9 @@
 
 	* vc-clearcase.el (vc-clearcase-checkout-model): accept both a
 	single file and a file set as an argument
+	(clearcase-revision-reserved-p): return non nil if any revision on
+	the branch is checked out reserved, not just the current file
+	revision.
 
 2011-02-02  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
